# mocap

./: .gitignore  clean_dataset.py  clean_dataset1.py  dataset.csv  makefile  pyproject.toml  readme.md  take.py
scripts/: align_audio.py  align_phase2.py  clean_file_names.py  clean_mocap.py  mappings.py
src/mocap/: __init__.py  main.py
